==> asig/4g_relais/src/bsp/src/bsp_uart_fifo.c <==
#include "bsp.h"
#define USART1_CLK_ENABLE()              __HAL_RCC_USART1_CLK_ENABLE()
#define USART1_TX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USART1_TX_GPIO_PORT              GPIOA
#define USART1_TX_PIN                    GPIO_PIN_9
#define USART1_TX_AF                     GPIO_AF7_USART1
#define USART1_RX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USART1_RX_GPIO_PORT              GPIOA
#define USART1_RX_PIN                    GPIO_PIN_10
#define USART1_RX_AF                     GPIO_AF7_USART1
#define USART2_CLK_ENABLE()              __HAL_RCC_USART2_CLK_ENABLE()
#define USART2_TX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USART2_TX_GPIO_PORT              GPIOA
#define USART2_TX_PIN                    GPIO_PIN_2
#define USART2_TX_AF                     GPIO_AF7_USART2
#define USART2_RX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USART2_RX_GPIO_PORT              GPIOA
#define USART2_RX_PIN                    GPIO_PIN_3
#define USART2_RX_AF                     GPIO_AF7_USART2
#define USART3_CLK_ENABLE()              __HAL_RCC_USART3_CLK_ENABLE()
#define USART3_TX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOB_CLK_ENABLE()
#define USART3_TX_GPIO_PORT              GPIOB
#define USART3_TX_PIN                    GPIO_PIN_10
#define USART3_TX_AF                     GPIO_AF7_USART3
#define USART3_RX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOB_CLK_ENABLE()
#define USART3_RX_GPIO_PORT              GPIOB

void RS485_InitTXE(void)
{
	GPIO_InitTypeDef gpio_init;
	
	/* 打开GPIO时钟 */
	RS485_TXEN_GPIO_CLK_ENABLE();
	
	/* 配置引脚为推挽输出 */
	gpio_init.Mode = GPIO_MODE_OUTPUT_PP;			/* 推挽输出 */
	gpio_init.Pull = GPIO_NOPULL;					/* 上下拉电阻不使能 */
	gpio_init.Speed = GPIO_SPEED_FREQ_HIGH;	/* GPIO速度等级 */
	gpio_init.Pin = RS485_TXEN_PIN;
	HAL_GPIO_Init(RS485_TXEN_GPIO_PORT, &gpio_init);	
}

static void InitHardUart(void)
{
	GPIO_InitTypeDef  GPIO_InitStruct;

	#if UART1_FIFO_EN == 1		/* UART1 */
	
		/* Enable GPIO TX/RX clock */
		USART1_TX_GPIO_CLK_ENABLE();
		USART1_RX_GPIO_CLK_ENABLE();
		
		/* Enable USARTx clock */
		USART1_CLK_ENABLE();	

		/* Configure TX pin */
		GPIO_InitStruct.Pin       = USART1_TX_PIN;
		GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
		GPIO_InitStruct.Pull      = GPIO_PULLUP;
		GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_HIGH;
	//	GPIO_InitStruct.Alternate = USART1_TX_AF;
		HAL_GPIO_Init(USART1_TX_GPIO_PORT, &GPIO_InitStruct);	
		
		/* Configure RX pin */
		GPIO_InitStruct.Pin = USART1_RX_PIN;
	//	GPIO_InitStruct.Alternate = USART1_RX_AF;
		HAL_GPIO_Init(USART1_RX_GPIO_PORT, &GPIO_InitStruct);

		/* Configure NVIC for UART */   
		HAL_NVIC_SetPriority(USART1_IRQn, 0, 1);
		HAL_NVIC_EnableIRQ(USART1_IRQn);
	  
		/* Configure baud rate and parity */
		bsp_SetUartParam(USART1,  UART1_BAUD, UART_PARITY_NONE, UART_MODE_TX_RX);

		CLEAR_BIT(USART1->SR, USART_SR_TC);   /* Clear TC (Transmission Complete) flag */
		CLEAR_BIT(USART1->SR, USART_SR_RXNE); /* Clear RXNE (Receive Not Empty) flag */
		// USART_CR1_PEIE | USART_CR1_RXNEIE
		SET_BIT(USART1->CR1, USART_CR1_RXNEIE);	/* Enable RX interrupt */
	#endif
	#if UART2_FIFO_EN == 1		/* UART2 */
		/* Enable GPIO TX/RX clock */
		USART2_TX_GPIO_CLK_ENABLE();
		USART2_RX_GPIO_CLK_ENABLE();
		
		/* Enable USARTx clock */
		USART2_CLK_ENABLE();	

		/* Configure TX pin */
		GPIO_InitStruct.Pin       = USART2_TX_PIN;
		GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
		GPIO_InitStruct.Pull      = GPIO_PULLUP;
		GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_HIGH;
	//	GPIO_InitStruct.Alternate = USART2_TX_AF;
		HAL_GPIO_Init(USART2_TX_GPIO_PORT, &GPIO_InitStruct);	
		
		/* Configure RX pin */
		GPIO_InitStruct.Pin = USART2_RX_PIN;
	//	GPIO_InitStruct.Alternate = USART2_RX_AF;
		HAL_GPIO_Init(USART2_RX_GPIO_PORT, &GPIO_InitStruct);

		/* Configure NVIC for UART */   
		HAL_NVIC_SetPriority(USART2_IRQn, 0, 2);
		HAL_NVIC_EnableIRQ(USART2_IRQn);
	  
		/* Configure baud rate and parity */
		bsp_SetUartParam(USART2,  UART2_BAUD, UART_PARITY_NONE, UART_MODE_TX_RX);	// UART_MODE_TX_RX

		CLEAR_BIT(USART2->SR, USART_SR_TC);   /* Clear TC (Transmission Complete) flag */
		CLEAR_BIT(USART2->SR, USART_SR_RXNE); /* Clear RXNE (Receive Not Empty) flag */
		SET_BIT(USART2->CR1, USART_CR1_RXNEIE);	/* Enable RX interrupt */
	#endif

#if UART3_FIFO_EN == 1			/* UART3 */
	/* Enable GPIO TX/RX clock */
	USART3_TX_GPIO_CLK_ENABLE();
	USART3_RX_GPIO_CLK_ENABLE();
	
	/* Enable USARTx clock */
	USART3_CLK_ENABLE();	

	/* Configure TX pin */
	GPIO_InitStruct.Pin       = USART3_TX_PIN;
	GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull      = GPIO_PULLUP;
	GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStruct.Alternate = USART3_TX_AF;
	HAL_GPIO_Init(USART3_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* Configure RX pin */
	GPIO_InitStruct.Pin = USART3_RX_PIN;
	GPIO_InitStruct.Alternate = USART3_RX_AF;
	HAL_GPIO_Init(USART3_RX_GPIO_PORT, &GPIO_InitStruct);

	/* Configure NVIC for UART */   
	HAL_NVIC_SetPriority(USART3_IRQn, 0, 3);
	HAL_NVIC_EnableIRQ(USART3_IRQn);
  
	/* Configure baud rate and parity */
	bsp_SetUartParam(USART3,  UART3_BAUD, UART_PARITY_NONE, UART_MODE_TX_RX);

	CLEAR_BIT(USART3->SR, USART_SR_TC);   /* Clear TC (Transmission Complete) flag */
	CLEAR_BIT(USART3->SR, USART_SR_RXNE); /* Clear RXNE (Receive Not Empty) flag */
	SET_BIT(USART3->CR1, USART_CR1_RXNEIE);	/* Enable RX interrupt */
#endif

#if UART4_FIFO_EN == 1			/* UART4 TX = PC10   RX = PC11 */
	/* Enable GPIO TX/RX clock */
	UART4_TX_GPIO_CLK_ENABLE();
	UART4_RX_GPIO_CLK_ENABLE();
	
	/* Enable USARTx clock */
	UART4_CLK_ENABLE();	

	/* Configure TX pin */
	GPIO_InitStruct.Pin       = UART4_TX_PIN;
	GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull      = GPIO_PULLUP;
	GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStruct.Alternate = UART4_TX_AF;
	HAL_GPIO_Init(UART4_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* Configure RX pin */
	GPIO_InitStruct.Pin = UART4_RX_PIN;
	GPIO_InitStruct.Alternate = UART4_RX_AF;
	HAL_GPIO_Init(UART4_RX_GPIO_PORT, &GPIO_InitStruct);

	/* Configure NVIC for UART */   
	HAL_NVIC_SetPriority(UART4_IRQn, 0, 4);
	HAL_NVIC_EnableIRQ(UART4_IRQn);
  
	/* Configure baud rate and parity */
	bsp_SetUartParam(UART4,  UART4_BAUD, UART_PARITY_NONE, UART_MODE_TX_RX);

	CLEAR_BIT(USART4->SR, USART_SR_TC);   /* Clear TC (Transmission Complete) flag */
	CLEAR_BIT(USART4->SR, USART_SR_RXNE); /* Clear RXNE (Receive Not Empty) flag */
	SET_BIT(UART4->CR1, USART_CR1_RXNEIE);	/* Enable RX interrupt */
#endif

#if UART5_FIFO_EN == 1			/* UART5 TX = PC12   RX = PD2 */
	/* Enable GPIO TX/RX clock */
	UART5_TX_GPIO_CLK_ENABLE();
	UART5_RX_GPIO_CLK_ENABLE();
	
	/* Enable USARTx clock */
	UART5_CLK_ENABLE();	

	/* Configure TX pin */
	GPIO_InitStruct.Pin       = UART5_TX_PIN;
	GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull      = GPIO_PULLUP;
	GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStruct.Alternate = UART5_TX_AF;
	HAL_GPIO_Init(UART5_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* Configure RX pin */
	GPIO_InitStruct.Pin = UART5_RX_PIN;
	GPIO_InitStruct.Alternate = UART5_RX_AF;
	HAL_GPIO_Init(UART5_RX_GPIO_PORT, &GPIO_InitStruct);

	/* Configure NVIC for UART */   
	HAL_NVIC_SetPriority(UART5_IRQn, 0, 5);
	HAL_NVIC_EnableIRQ(UART5_IRQn);
  
	/* Configure baud rate and parity */
	bsp_SetUartParam(UART5,  UART5_BAUD, UART_PARITY_NONE, UART_MODE_TX_RX);

	CLEAR_BIT(USART5->SR, USART_SR_TC);   /* Clear TC (Transmission Complete) flag */
	CLEAR_BIT(USART5->SR, USART_SR_RXNE); /* Clear RXNE (Receive Not Empty) flag */
	SET_BIT(UART5->CR1, USART_CR1_RXNEIE);	/* Enable RX interrupt */
#endif

#if UART6_FIFO_EN == 1			/* USART6 */
	/* Enable GPIO TX/RX clock */
	USART6_TX_GPIO_CLK_ENABLE();
	USART6_RX_GPIO_CLK_ENABLE();
	
	/* Enable USARTx clock */
	USART6_CLK_ENABLE();	

	/* Configure TX pin */
	GPIO_InitStruct.Pin       = USART6_TX_PIN;
	GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull      = GPIO_PULLUP;
	GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate = USART6_TX_AF;
	HAL_GPIO_Init(USART6_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* Configure RX pin */
	GPIO_InitStruct.Pin = USART6_RX_PIN;
	GPIO_InitStruct.Alternate = USART6_RX_AF;
	HAL_GPIO_Init(USART6_RX_GPIO_PORT, &GPIO_InitStruct);

	/* Configure NVIC for UART */   
	HAL_NVIC_SetPriority(USART6_IRQn, 0, 6);
	HAL_NVIC_EnableIRQ(USART6_IRQn);
	
	/* Configure baud rate and parity */
	bsp_SetUartParam(USART6,  UART6_BAUD, UART_PARITY_NONE, UART_MODE_TX_RX);

	CLEAR_BIT(USART6->SR, USART_SR_TC);   /* Clear TC (Transmission Complete) flag */
	CLEAR_BIT(USART6->SR, USART_SR_RXNE); /* Clear RXNE (Receive Not Empty) flag */
	SET_BIT(USART6->CR1, USART_CR1_RXNEIE);	/* Enable RX interrupt */
#endif

#if UART7_FIFO_EN == 1			/* UART7 */
	/* Enable GPIO TX/RX clock */
	UART7_TX_GPIO_CLK_ENABLE();
	UART7_RX_GPIO_CLK_ENABLE();
	
	/* Enable USARTx clock */
	UART7_CLK_ENABLE();	

	/* Configure TX pin */
	GPIO_InitStruct.Pin       = UART7_TX_PIN;
	GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull      = GPIO_PULLUP;
	GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate = UART7_TX_AF;
	HAL_GPIO_Init(UART7_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* Configure RX pin */
	GPIO_InitStruct.Pin = UART7_RX_PIN;
	GPIO_InitStruct.Alternate = UART7_RX_AF;
	HAL_GPIO_Init(UART7_RX_GPIO_PORT, &GPIO_InitStruct);

	/* Configure NVIC for UART */   
	HAL_NVIC_SetPriority(UART7_IRQn, 0, 6);
	HAL_NVIC_EnableIRQ(UART7_IRQn);
	
	/* Configure baud rate and parity */
	bsp_SetUartParam(UART7,  UART7_BAUD, UART_PARITY_NONE, UART_MODE_TX_RX);

	CLEAR_BIT(USART7->SR, USART_SR_TC);   /* Clear TC (Transmission Complete) flag */
	CLEAR_BIT(USART7->SR, USART_SR_RXNE); /* Clear RXNE (Receive Not Empty) flag */
	SET_BIT(UART7->CR1, USART_CR1_RXNEIE);	/* Enable RX interrupt */
#endif

#if UART8_FIFO_EN == 1			/* UART8 */
	/* Enable GPIO TX/RX clock */
	UART8_TX_GPIO_CLK_ENABLE();
	UART7_RX_GPIO_CLK_ENABLE();
	
	/* Enable USARTx clock */
	UART8_CLK_ENABLE();	

	/* Configure TX pin */
	GPIO_InitStruct.Pin       = UART8_TX_PIN;
	GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull      = GPIO_PULLUP;
	GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate = UART8_TX_AF;
	HAL_GPIO_Init(UART8_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* Configure RX pin */
	GPIO_InitStruct.Pin = UART8_RX_PIN;
	GPIO_InitStruct.Alternate = UART8_RX_AF;
	HAL_GPIO_Init(UART8_RX_GPIO_PORT, &GPIO_InitStruct);

	/* Configure NVIC for UART */   
	HAL_NVIC_SetPriority(UART8_IRQn, 0, 6);
	HAL_NVIC_EnableIRQ(UART8_IRQn);
	
	/* Configure baud rate and parity */
	bsp_SetUartParam(UART8,  UART8_BAUD, UART_PARITY_NONE, UART_MODE_TX_RX);
	
	CLEAR_BIT(USART8->SR, USART_SR_TC);   /* Clear TC (Transmission Complete) flag */
	CLEAR_BIT(USART8->SR, USART_SR_RXNE); /* Clear RXNE (Receive Not Empty) flag */
	SET_BIT(UART8->CR1, USART_CR1_RXNEIE);	/* Enable RX interrupt */
#endif
}

static void UartSend(UART_T *_pUart, uint8_t *_ucaBuf, uint16_t _usLen)
{
	uint16_t i;

	for (i = 0; i < _usLen; i++)
	{
		/* If the transmit buffer is already full, wait for the buffer to become empty */
		while (1)
		{
			__IO uint16_t usCount;

			DISABLE_INT();
			usCount = _pUart->usTxCount;
			ENABLE_INT();

			if (usCount < _pUart->usTxBufSize)
			{
				break;
			}
			else if(usCount == _pUart->usTxBufSize)/* Data has filled the buffer */
			{
				if((_pUart->uart->CR1 & USART_CR1_TXEIE) == 0)
				{
					SET_BIT(_pUart->uart->CR1, USART_CR1_TXEIE);
				}  
			}
		}

		/* Fill the new data into the transmit buffer */
		_pUart->pTxBuf[_pUart->usTxWrite] = _ucaBuf[i];

		DISABLE_INT();
		if (++_pUart->usTxWrite >= _pUart->usTxBufSize)
		{
			_pUart->usTxWrite = 0;
		}
		_pUart->usTxCount++;
		ENABLE_INT();
	}

	SET_BIT(_pUart->uart->CR1, USART_CR1_TXEIE);	/* Enable transmit interrupt (buffer empty) */
}
